# f2elk

./: .gitignore  Cargo.toml  README.md  config.json  test.txt
src/: .main.rs.swp  config.rs  db.rs  file.rs  file_reader.rs  http.rs  main.rs  time.rs
src/export/: https.rs  mod.rs  stdout.rs
src/file/: file.rs  file_reader.rs  mod.rs
src/processing/: lines_producer.rs  lines_sender.rs  mod.rs
