[package]
name = "f2elk"
version = "0.1.0"
authors = ["stavinsky"]

#[profile.release]
#lto = true
[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
regex = "1"
signal-hook = "0.1.7"
rustls = "0.15.1"

[dependencies.reqwest]
version="0.9.9"
features=["rustls-tls" ]
default-features = false

[[bin]]
name = "f2elk"
path = "src/main.rs"
